--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "puppeteer": "^2.0.0",
+    "nodemon": "^2.0.2",
+    "torrent-stream": "^1.2.0",
     "webtorrent": "^0.107.17"
   }
 }
