--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@amankapur007/trakt.tv": "1.0.0",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
+    "torrent-search-api": "^2.0.10",
     "torrent-stream": "^1.2.0",
-    "@amankapur007/trakt.tv": "1.0.0",
     "trakt.tv-images": "^5.2.0",
     "webtorrent": "^0.107.17"
   }
